docs: translate all JavaDocs in Server module * refactor: cleanup more code